# arenito-galacticos

./: .gitignore  README.md  arenito.py  pasos.md  scaler.py  todo
ai/: arenito.py  arenito_ai.py  arenito_com.py  arenito_com_consts.py  arenito_logger.py  arenito_timer.py  arenito_vision.py  img_proc.txt  jet.py  ralign.py  requirements.txt  spat_awareness.txt  vis.py
ai/graphs/: d.dot
ai/interfaces/: jetson_interface.py  sim_interface.py
arduino/: ArenitoUtils.h  arduino.ino  arenito.ino  compilation  compile.zsh
arduino/KalmanFilter/: KalmanFilter.ino
arduino/Motores-v1/: Motores-v1.ino
arduino/arenito/: arenito.ino
arduino/avanza/: avanza.ino  avanza.inos
arduino/scanner/: scanner.ino
arduino/tests/: ultrasonic.ino
arduino/utils/: ArenitoUtils.h  quickVec3.h
images/: descripcion
raspi/: arenito.py  arenito_ai.py  arenito_com.py  arenito_com_consts.py  arenito_com_conts.py  arenito_timer.py  arenito_vision.py  control-manual.py  desplazamiento.py  jet.py  requirements.txt
raspi/graphs/: dd.dot
raspi/interfaces/: jetson_interface.py  serial_interface.py  sim_interface.py
sim/: Cargo.toml  sim-todo  todo
sim/assets/: arenito.mtl
sim/assets/models/: camara.mtl  cerdas.mtl  rueda.mtl
sim/src/: arenito.rs  arenito_plugin.rs  cans.rs  collision.rs  main.rs  scenes.rs  sensor.rs  spatial_awareness.rs  static_shape.rs  wire.rs
sim/utils/: autils.py  mmap.py  shmem.py  terrain.py  utils.py  utils_test.py
utils/: cleanup.py  compile.py  imagecollection.py  img2png.py  scaler.py  serial-listener.py  tester.py  threshold.py
(+22 files in other folders)
