[package]
name = "sim"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.0", features = ["dynamic_linking"] }
bevy_obj = "0.12.0"
bevy_panorbit_camera = "0.13"
rand = "0.8.5"
memmap = "0.7.0"
image = "0.24.8"
itertools = "0.12.1"
clap = { version = "4.5.4", features = ["derive"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
